[package]
name = "networked-system-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["default", "rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
tokio = { version = "1.33", features = ["full"] }
bytemuck = { version = "1.14", features = ["derive"] }
image = { version = "0.24", features = ["png", "jpeg"] }
anyhow = "1.0"
cgmath = "0.18"